--- a/packages/workspace/scripts/project.json
+++ b/packages/workspace/scripts/project.json
@@ -1,5 +1,5 @@
 {
-    "name": "scripts",
+    "name": "workspace-scripts",
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "packages/workspace/scripts/src",
     "projectType": "library",
