--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
         "@nx/esbuild": "20.0.3",
         "@nx/eslint": "20.0.3",
         "@nx/eslint-plugin": "20.0.3",
-        "@nx/jest": "20.0.3",
         "@nx/js": "20.0.3",
         "@nx/next": "20.0.3",
         "@nx/node": "20.0.3",
@@ -60,7 +59,6 @@
         "@swc/core": "1.7.11",
         "@testing-library/react": "16.0.1",
         "@types/d3": "^7.4.3",
-        "@types/jest": "^29.5.14",
         "@types/node": "20.15.0",
         "@types/node-cron": "^3.0.11",
         "@types/pg": "^8.11.6",
@@ -68,10 +66,10 @@
         "@types/react-dom": "18.3.0",
         "@typescript-eslint/eslint-plugin": "7.18.0",
         "@typescript-eslint/parser": "7.18.0",
+        "@vitest/coverage-v8": "^2.1.4",
         "@vitest/ui": "^2.0.5",
         "astro": "^4.16.7",
         "autoprefixer": "^10.4.20",
-        "babel-jest": "^29.7.0",
         "chalk": "4.1.2",
         "copy-file": "^11.0.0",
         "copyfiles": "^2.4.1",
@@ -94,9 +92,6 @@
         "glob": "^11.0.0",
         "husky": "^9.1.5",
         "inquirer": "^10.2.2",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
-        "jest-environment-node": "^29.7.0",
         "jsdom": "~24.1.1",
         "nx": "20.0.3",
         "pino-pretty": "^11.2.2",
@@ -114,7 +109,6 @@
         "svelte-check": "^3.8.5",
         "svelte-infinite-scroll": "^2.0.1",
         "tailwindcss": "3.4.10",
-        "ts-jest": "29.2.4",
         "tsconfig-paths": "^4.2.0",
         "tsx": "^4.19.2",
         "typedoc": "^0.26.10",
