--- a/packages/nx-plugins/lighthouse/project.json
+++ b/packages/nx-plugins/lighthouse/project.json
@@ -4,13 +4,5 @@
     "sourceRoot": "packages/nx-plugins/lighthouse/src",
     "projectType": "library",
     "tags": ["nx-plugins"],
-    "targets": {
-        "test": {
-            "executor": "@nx/jest:jest",
-            "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
-            "options": {
-                "jestConfig": "packages/nx-plugins/lighthouse/jest.config.ts"
-            }
-        }
-    }
+    "targets": {}
 }
