--- a/packages/shared/trpc/project.json
+++ b/packages/shared/trpc/project.json
@@ -3,14 +3,6 @@
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "packages/shared/trpc/src",
     "projectType": "library",
-    "targets": {
-        "test": {
-            "executor": "@nx/jest:jest",
-            "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
-            "options": {
-                "jestConfig": "packages/shared/trpc/jest.config.ts"
-            }
-        }
-    },
+    "targets": {},
     "tags": ["shared"]
 }
