--- a/packages/just/cms/dashboard-config/tsconfig.json
+++ b/packages/just/cms/dashboard-config/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "../../../../tsconfig.base.json",
+    "extends": "../../../../tsconfig.json",
     "compilerOptions": {
         "target": "ES2019",
         "lib": ["ES2019", "DOM"],
