refactor: simplify tsconfigs

--- a/packages/just/cms/types/tsconfig.json
+++ b/packages/just/cms/types/tsconfig.json
@@ -1,16 +1,4 @@
 {
     "extends": "../../../../tsconfig.json",
-    "compilerOptions": {
-        "module": "esnext"
-    },
-    "files": [],
-    "include": [],
-    "references": [
-        {
-            "path": "./tsconfig.lib.json"
-        },
-        {
-            "path": "./tsconfig.spec.json"
-        }
-    ]
+    "include": ["./src/**/*.ts"]
 }
