--- a/packages/shared/trpc/tsconfig.json
+++ b/packages/shared/trpc/tsconfig.json
@@ -1,13 +1,4 @@
 {
     "extends": "../../../tsconfig.json",
-    "files": [],
-    "include": [],
-    "references": [
-        {
-            "path": "./tsconfig.lib.json"
-        },
-        {
-            "path": "./tsconfig.spec.json"
-        }
-    ]
+    "include": ["./src/**/*.ts"]
 }
