--- a/packages/nx-plugins/vite/tsconfig.json
+++ b/packages/nx-plugins/vite/tsconfig.json
@@ -1,16 +1,4 @@
 {
     "extends": "../../../tsconfig.json",
-    "compilerOptions": {
-        "module": "commonjs"
-    },
-    "files": [],
-    "include": [],
-    "references": [
-        {
-            "path": "./tsconfig.lib.json"
-        },
-        {
-            "path": "./tsconfig.spec.json"
-        }
-    ]
+    "include": ["src/**/*.ts"]
 }
