--- a/packages/shared/health/tsconfig.json
+++ b/packages/shared/health/tsconfig.json
@@ -1,11 +1,4 @@
 {
     "extends": "../../../tsconfig.json",
-    "references": [
-        {
-            "path": "./tsconfig.lib.json"
-        },
-        {
-            "path": "./tsconfig.spec.json"
-        }
-    ]
+    "include": ["./src/**/*.ts"]
 }
