--- a/packages/workspace/scripts/tsconfig.json
+++ b/packages/workspace/scripts/tsconfig.json
@@ -1,18 +1,4 @@
 {
     "extends": "../../../tsconfig.json",
-    "compilerOptions": {
-        "module": "commonjs",
-        "forceConsistentCasingInFileNames": true,
-        "noImplicitOverride": true,
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
-        "noPropertyAccessFromIndexSignature": true
-    },
-    "files": [],
-    "include": [],
-    "references": [
-        {
-            "path": "./tsconfig.lib.json"
-        }
-    ]
+    "include": ["src/**/*.ts"]
 }
