--- a/packages/just/documentation/doc-projects.json
+++ b/packages/just/documentation/doc-projects.json
@@ -1,6 +1,7 @@
 [
     {
         "name": "monorepo",
-        "paths": ["./packages", "./docs"]
+        "root": ".",
+        "srcPath": "./packages"
     }
 ]
