--- a/packages/zinzow/project.json
+++ b/packages/zinzow/project.json
@@ -1,19 +1,19 @@
 {
-    "name": "just",
+    "name": "zinzow",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
-    "sourceRoot": "packages/just",
+    "sourceRoot": "packages/zinzow",
     "projectType": "application",
     "targets": {
         "deploy": {
             "executor": "nx-plugins-ci:deploy",
             "options": {
-                "enabled": true,
+                "enabled": false,
                 "files": [".env", "docker-compose.yaml"],
                 "commands": ["docker compose up -d --pull always --remove-orphans"]
             },
             "configurations": {
                 "development": {
-                    "enabled": false
+                    "enabled": true
                 }
             }
         }
