--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,7 @@
             "@codesdowork/shared-trpc": ["packages/shared/trpc/src/index.ts"],
             "@codesdowork/shared-utils": ["packages/shared/utils/src/index.ts"],
             "nx-plugins-astro": ["packages/nx-plugins/astro/src/index.ts"],
+            "nx-plugins-ci": ["packages/nx-plugins/ci/src/index.ts"],
             "nx-plugins-directus-extensions": [
                 "packages/nx-plugins/directus-extensions/src/index.ts"
             ],
