--- a/nx.json
+++ b/nx.json
@@ -23,7 +23,12 @@
         }
     },
     "namedInputs": {
-        "default": ["{projectRoot}/**/*", "sharedGlobals", "!{projectRoot}/Dockerfile", "!{projectRoot}/docker-compose.yaml"],
+        "default": [
+            "{projectRoot}/**/*",
+            "sharedGlobals",
+            "!{projectRoot}/Dockerfile",
+            "!{projectRoot}/docker-compose.yaml"
+        ],
         "production": [
             "default",
             "!{projectRoot}/**/?(*.)+(spec|test).[jt]s?(x)?(.snap)",
