--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,10 +52,10 @@
             "nx-plugins-secrets-manager": ["packages/nx-plugins/secrets-manager/src/index.ts"],
             "nx-plugins-svelte": ["packages/nx-plugins/svelte/src/index.ts"],
             "nx-plugins-tsc": ["packages/nx-plugins/tsc/src/index.ts"],
+            "nx-plugins-utils": ["packages/nx-plugins/utils/src/index.ts"],
             "nx-plugins-vite": ["packages/nx-plugins/vite/src/index.ts"],
             "nx-plugins-vitepress": ["packages/nx-plugins/vitepress/src/index.ts"],
-            "nx-plugins-vitest": ["packages/nx-plugins/vitest/src/index.ts"],
-            "nx-plugins-utils": ["packages/nx-plugins/utils/src/index.ts"]
+            "nx-plugins-vitest": ["packages/nx-plugins/vitest/src/index.ts"]
         }
     },
     "exclude": ["node_modules", "tmp", "dist", "packages/just/website", "packages/zinzow/website"]
