--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,15 @@
     "root": true,
     "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
     "ignorePatterns": ["**/*"],
-    "plugins": ["@nx", "svelte3", "@typescript-eslint"],
+    "plugins": ["@nx", "svelte3", "@typescript-eslint", "@stylistic/eslint-plugin-ts"],
     "overrides": [
+        {
+            "files": ["*"],
+            "rules": {
+                "@typescript-eslint/no-explicit-any": "warn",
+                "@typescript-eslint/no-unused-expressions": "off"
+            }
+        },
         {
             "files": ["*.svelte"],
             "parser": "svelte-eslint-parser",
@@ -19,12 +26,17 @@
             }
         },
         {
+            "files": "*.js",
+            "rules": {
+                "@typescript-eslint/no-require-imports": "off"
+            }
+        },
+        {
             "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
             "rules": {
                 "@nx/enforce-module-boundaries": [
                     "error",
                     {
-                        "enforceBuildableLibDependency": true,
                         "allow": [],
                         "depConstraints": [
                             {
@@ -66,14 +78,6 @@
                         ]
                     }
                 ]
-            }
-        },
-        {
-            "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-            "extends": ["plugin:@nx/typescript"],
-            "rules": {
-                "@typescript-eslint/no-extra-semi": "error",
-                "no-extra-semi": "off"
             }
         }
     ]
