--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "copy-file": "^11.0.0",
         "copyfiles": "^2.4.1",
         "cross-env": "^7.0.3",
+        "date-fns": "^4.1.0",
         "dotenv-cli": "^7.4.2",
         "emailjs": "^4.0.3",
         "envsub": "^4.1.0",
