--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,9 @@ default:
       paths:
         - node_modules
       policy: $DEPS_CACHE_POLICY
+    - key: nx-cache
+      paths:
+        - .nx
     - key: cache-${CI_COMMIT_SHA}
       paths:
         - ./.env
