--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "@nx/workspace": "20.0.3",
         "@octokit/types": "^13.5.0",
         "@secretlint/secretlint-rule-preset-recommend": "^8.2.4",
+        "@stylistic/eslint-plugin-ts": "^2.10.1",
         "@sveltejs/adapter-node": "^5.2.9",
         "@sveltejs/kit": "^2.8.1",
         "@sveltejs/vite-plugin-svelte": "^3.1.2",
