chore(just): rename just-music-downloader image

--- a/packages/just/docker-compose.yaml
+++ b/packages/just/docker-compose.yaml
@@ -357,7 +357,7 @@ services:
       - PORT=${MUSIC_DOWNLOADER_PORT}
     healthcheck:
       test: wget -qO- http://localhost:${MUSIC_DOWNLOADER_PORT}/api/trpc/health?input={} || exit 1
-    image: ${IMAGE_BASE}/music-downloader:${PROJECT_VERSION:-latest}
+    image: ${IMAGE_BASE}/just-music-downloader:${PROJECT_VERSION:-latest}
     volumes:
       - ${MUSIC_VOLUME}/downloads:/music/downloads
 
