--- a/nx.json
+++ b/nx.json
@@ -1,8 +1,6 @@
 {
     "$schema": "./node_modules/nx/schemas/nx-schema.json",
-    "affected": {
-        "defaultBase": "remotes/origin/master"
-    },
+    "defaultBase": "remotes/origin/develop",
     "targetDefaults": {
         "build": {
             "inputs": ["production", "^production"],
