--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -173,6 +173,17 @@ secrets:
       - HOST
       - PORT
 
+  SSH:
+    collectionId: 69f78f20-664b-458c-bfdf-06f7d6c0ecb9
+    prefix: true
+    vars:
+      - USERNAME
+      - HOST
+      - name: PRIVATE_KEY
+        file: ./.ssh/id_rsa
+      - name: KNOWN_HOSTS
+        file: ./.ssh/known_hosts
+
   TUNNEL:
     collectionId: 02bfec5e-5b84-4ea6-ae6d-2675fe9910b8
     prefix: true
