--- a/packages/zinzow/.env.secure.yaml
+++ b/packages/zinzow/.env.secure.yaml
@@ -3,6 +3,13 @@ env:
   DOMAIN: agrarservicenordost.de
   STACK_NAME: ${BASE_STACK_NAME}_zinzow
 secrets:
+  DB:
+    collectionId: 9479217e-1b81-4d1f-afa0-7e7a346dc154
+    prefix: true
+    vars:
+      - USERNAME
+      - PASSWORD
+
   CMS:
     collectionId: 2c6e344c-5a88-41d6-8c33-78f52dbbb7e3
     prefix: true
@@ -10,12 +17,18 @@ secrets:
       - USERNAME
       - PASSWORD
       - SECRET
-  DB:
-    collectionId: 9479217e-1b81-4d1f-afa0-7e7a346dc154
+
+  SSH:
+    collectionId: 69f78f20-664b-458c-bfdf-06f7d6c0ecb9
     prefix: true
     vars:
       - USERNAME
-      - PASSWORD
+      - HOST
+      - name: PRIVATE_KEY
+        file: ./.ssh/id_rsa
+      - name: KNOWN_HOSTS
+        file: ./.ssh/known_hosts
+
   TUNNEL:
     collectionId: 02f00503-8e59-4086-9891-37fa5c950bb4
     prefix: true
