--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,7 +55,8 @@
             "nx-plugins-utils": ["packages/nx-plugins/utils/src/index.ts"],
             "nx-plugins-vite": ["packages/nx-plugins/vite/src/index.ts"],
             "nx-plugins-vitepress": ["packages/nx-plugins/vitepress/src/index.ts"],
-            "nx-plugins-vitest": ["packages/nx-plugins/vitest/src/index.ts"]
+            "nx-plugins-vitest": ["packages/nx-plugins/vitest/src/index.ts"],
+            "nx-plugins-wrangler": ["packages/nx-plugins/wrangler/src/index.ts"]
         }
     },
     "exclude": ["node_modules", "tmp", "dist", "packages/just/website", "packages/zinzow/website"]
