--- a/packages/just/maintenance/wrangler.toml
+++ b/packages/just/maintenance/wrangler.toml
@@ -1,11 +1,8 @@
 name = "just-maintenance"
-main = "worker.js"
+main = "./worker/worker.ts"
 compatibility_date = "2023-08-23"
 
 minify = true
 
-[build]
-command = "nx build just-maintenance"
-
 [site]
-bucket = "../../../dist/packages/just-maintenance"
+bucket = "../../../dist/packages/just/maintenance"
