feat(nx-plugins-wrangler): inject delete task

--- a/nx.json
+++ b/nx.json
@@ -66,6 +66,9 @@
             "plugin": "nx-plugins-vitest"
         },
         {
+            "plugin": "nx-plugins-wrangler"
+        },
+        {
             "plugin": "@nx/next/plugin",
             "options": {
                 "buildTargetName": "build",
