feat(nx-plugins-wrangler): added wrangler login for CI/CD

--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -49,10 +49,10 @@ secrets:
       - PORT
 
   CLOUDFLARE:
-    collectionId: fef18992-6636-45c8-a9e1-02563771ae72
+    collectionId: 8047ae6f-1a11-4df6-8aaf-97f6043149fb
     prefix: true
     vars:
-      - API_TOKEN
+      - ZONE_API_TOKEN
       - EMAIL
 
   CMS:
