--- a/.env.secure.yaml
+++ b/.env.secure.yaml
@@ -5,3 +5,11 @@ env:
   IMAGE_BASE: ${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}
   BASE_STACK_NAME: ${ORGANIZATION}_${PROJECT}
   TZ: Europe/Berlin
+
+secure:
+  CLOUDFLARE:
+    collectionId: 8047ae6f-1a11-4df6-8aaf-97f6043149fb
+    prefix: true
+    vars:
+      - WORKERS_API_TOKEN
+      - ACCOUNT_ID
