fix(nx-plugins-svelte): add .svelte-kit as output for build
this way the .svelte-kit dir is recreated from cache and svelte-check can use it

--- a/nx.json
+++ b/nx.json
@@ -4,7 +4,7 @@
     "targetDefaults": {
         "build": {
             "inputs": ["production", "^production"],
-            "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
+            "outputs": ["{workspaceRoot}/dist/{projectRoot}", "{projectRoot}/.svelte-kit"],
             "cache": true
         },
         "test": {
