--- a/packages/zinzow/docker-compose.yml
+++ b/packages/zinzow/docker-compose.yml
@@ -1,18 +1,32 @@
 name: ${STACK_NAME}
 
+x-cap-drop: &cap-drop
+  cap_drop:
+    - ALL
+
+x-common: &common
+  <<: *cap-drop
+  restart: always
+
 services:
-  db:
+  postgres:
+    <<: *common
+    cap_add:
+      - CAP_FOWNER
+      - CAP_DAC_READ_SEARCH
+      - CAP_SETGID
+      - CAP_SETUID
     environment:
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_USER=${DB_USERNAME}
+      - POSTGRES_USER=${POSTGRES_USERNAME}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     healthcheck:
-      test: pg_isready -U $DB_USERNAME
+      test: pg_isready -U $POSTGRES_USERNAME
     image: postgres:15-alpine
-    restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
   cms:
+    <<: *common
     environment:
       - SECRET=${CMS_SECRET}
       - ADMIN_EMAIL=${CMS_USERNAME}
@@ -25,12 +39,12 @@ services:
       - DB_USER=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
     image: directus/directus:11
-    restart: unless-stopped
     volumes:
       - directus-uploads:/directus/uploads
       - directus-extensions:/directus/extensions
 
   tunnel:
+    <<: *common
     command:
       - tunnel
       - --no-autoupdate
@@ -38,18 +52,15 @@ services:
       - --token
       - ${TUNNEL_TOKEN}
     image: cloudflare/cloudflared
-    restart: unless-stopped
 
   website:
-    cap_drop:
-      - ALL
+    <<: *common
     environment:
       - PORT=4300
-    image: ${IMAGE_BASE}/zinzow-website
-    read_only: true
-    restart: unless-stopped
+    image: ${IMAGE_BASE}/zinzow-website:${PROJECT_VERSION:-latest}
 
 volumes:
   postgres-data:
+
   directus-uploads:
   directus-extensions:
