--- a/packages/zinzow/.env.secure.yaml
+++ b/packages/zinzow/.env.secure.yaml
@@ -3,13 +3,6 @@ env:
   DOMAIN: agrarservicenordost.de
   STACK_NAME: ${BASE_STACK_NAME}_zinzow
 secrets:
-  DB:
-    collectionId: 9479217e-1b81-4d1f-afa0-7e7a346dc154
-    prefix: true
-    vars:
-      - USERNAME
-      - PASSWORD
-
   CMS:
     collectionId: 2c6e344c-5a88-41d6-8c33-78f52dbbb7e3
     prefix: true
@@ -18,8 +11,15 @@ secrets:
       - PASSWORD
       - SECRET
 
+  POSTGRES:
+    collectionId: 9479217e-1b81-4d1f-afa0-7e7a346dc154
+    prefix: true
+    vars:
+      - USERNAME
+      - PASSWORD
+
   SSH:
-    collectionId: 69f78f20-664b-458c-bfdf-06f7d6c0ecb9
+    collectionId: 80f4b6fb-11e0-40f6-849b-39a58599fbad
     prefix: true
     vars:
       - USERNAME
