fix(nx-plugins-secrets-manager): make config schema strict and correct root config

--- a/.env.secure.yaml
+++ b/.env.secure.yaml
@@ -6,7 +6,7 @@ env:
   BASE_STACK_NAME: ${ORGANIZATION}_${PROJECT}
   TZ: Europe/Berlin
 
-secure:
+secrets:
   CLOUDFLARE:
     collectionId: 8047ae6f-1a11-4df6-8aaf-97f6043149fb
     prefix: true
