--- a/packages/zinzow/.env.secure.yaml
+++ b/packages/zinzow/.env.secure.yaml
@@ -3,6 +3,11 @@ env:
   DOMAIN: agrarservicenordost.de
   STACK_NAME: ${BASE_STACK_NAME}_zinzow
 secrets:
+  common:
+    collectionId: 2b7d003e-def7-4653-82e0-bd086f8f7e2b
+    vars:
+      - PROJECT_VERSION
+
   CMS:
     collectionId: 2c6e344c-5a88-41d6-8c33-78f52dbbb7e3
     prefix: true
