--- a/packages/zinzow/docker-compose.yaml
+++ b/packages/zinzow/docker-compose.yaml
@@ -36,8 +36,8 @@ services:
       - DB_HOST=db
       - DB_PORT=5432
       - DB_DATABASE=directus
-      - DB_USER=${DB_USERNAME}
-      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_USER=${POSTGRES_USERNAME}
+      - DB_PASSWORD=${POSTGRES_PASSWORD}
     image: directus/directus:11
     volumes:
       - directus-uploads:/directus/uploads
