feat(nx-plugins-secrets-manager): implemented own bitwarden client

--- a/.env.secure.yaml
+++ b/.env.secure.yaml
@@ -1,14 +1,17 @@
+bitwardenInfos:
+  - name: ORGANIZATION
+    value: ORGANIZATION_NAME
+  - name: PROJECT
+    value: PROJECT_NAME
+
 env:
   DOCKER_REGISTRY: docker.justinkonratt.com
-  ORGANIZATION: codesdowork
-  PROJECT: monorepo
   IMAGE_BASE: ${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}
   BASE_STACK_NAME: ${ORGANIZATION}_${PROJECT}
   TZ: Europe/Berlin
 
 secrets:
-  CLOUDFLARE:
-    collectionId: 8047ae6f-1a11-4df6-8aaf-97f6043149fb
+  cloudflare:
     prefix: true
     vars:
       - WORKERS_API_TOKEN
