--- a/.secrets.config.json
+++ b/.secrets.config.json
@@ -1,3 +1,5 @@
 {
-    "server": "https://bitwarden.justinkonratt.com"
+    "server": "https://bitwarden.justinkonratt.com",
+    "organizationId": "e1eecfa9-da83-4f98-9c03-194116d9cff6",
+    "rootCollectionId": "c718e974-22a1-4163-8cd7-8555c86f2e7b"
 }
