--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -1,4 +1,4 @@
-extends: .
+extends: ../..
 env:
   STACK_NAME: ${BASE_STACK_NAME}_just
 
@@ -22,9 +22,7 @@ env:
 
   TZ: Europe/Berlin
 secrets:
-  common:
-    collectionId: 5d1bba8a-9ac8-4b4a-8cde-cb0dc28d1f7f
-    prefix: false
+  index:
     vars:
       - DOMAIN
       - URL
@@ -32,31 +30,27 @@ secrets:
       - DEFAULT_NETWORK_PREFIX
       - DEFAULT_NETWORK_MASK
 
-  BACKBLAZE:
-    collectionId: 5511bbdb-a642-4d77-a528-c5a05bb241ef
+  backblaze:
     prefix: true
     vars:
       - KEY_ID
       - APPLICATION_KEY
       - BUCKET_NAME
 
-  BITWARDEN:
-    collectionId: 26a5baf1-fd83-4685-9b00-01826fb2d871
+  bitwarden:
     prefix: true
     vars:
       - DOMAIN
       - ADMIN_TOKEN
       - PORT
 
-  CLOUDFLARE:
-    collectionId: 8047ae6f-1a11-4df6-8aaf-97f6043149fb
+  ../cloudflare:
     prefix: true
     vars:
       - ZONE_API_TOKEN
       - EMAIL
 
-  CMS:
-    collectionId: 25cc4aac-b8ef-431c-a6b2-be521b5975b9
+  cms:
     prefix: true
     vars:
       - USERNAME
@@ -68,23 +62,20 @@ secrets:
       - DOMAIN
       - URL
 
-  DASHBOARD:
-    collectionId: 040210ac-cf5b-46db-9c5c-35eb1d062f1c
+  dashboard:
     prefix: true
     vars:
       - DOMAIN
       - PORT
 
-  DNS:
-    collectionId: 5d6df207-1481-4ef3-ba28-d74f0f36a577
+  dns:
     prefix: true
     vars:
       - IP
       - PASSWORD
       - WEB_PORT
 
-  GITLAB:
-    collectionId: 39dc9c4e-a50b-4b0f-9909-7ace23256304
+  gitlab:
     prefix: true
     vars:
       - PORT
@@ -92,24 +83,12 @@ secrets:
       - AUTH_CLIENT_ID
       - AUTH_CLIENT_SECRET
 
-  GITLAB_RUNNER:
-    collectionId: 41a58a55-3e61-4c9c-b3df-0c396944dfbd
+  gitlab-runner:
     prefix: true
     vars:
       - TOKEN
 
-  JUST_SITE:
-    collectionId: 940c403f-0c7d-447b-bbe8-6e650338a5ab
-    prefix: true
-    vars:
-      - GITHUB_TOKEN
-      - GRAVATAR_EMAIL
-      - PORT
-      - CMS_USER
-      - CMS_PASSWORD
-
-  KEYCLOAK:
-    collectionId: 69b8f38f-f1f8-4755-94eb-de9de4944b26
+  keycloak:
     prefix: true
     vars:
       - USERNAME
@@ -118,8 +97,7 @@ secrets:
       - REALM
       - PORT
 
-  LINKWARDEN:
-    collectionId: b9393d0f-359d-42a7-8cda-7bef642eee7d
+  linkwarden:
     prefix: true
     vars:
       - DOMAIN
@@ -128,15 +106,13 @@ secrets:
       - AUTH_CLIENT_ID
       - AUTH_CLIENT_SECRET
 
-  MUSIC:
-    collectionId: b61881f9-029c-4374-840f-cb064dedb304
+  music/platform:
     prefix: true
     vars:
       - PORT
       - PASSWORD_ENCRYPTION_KEY
 
-  NGINX:
-    collectionId: b4812088-d420-4d38-969b-2f6fd4e044fc
+  nginx:
     prefix: true
     vars:
       - AUTH_USERNAME_HEADER
@@ -144,28 +120,24 @@ secrets:
       - AUTH_CLIENT_SECRET
       - IP
 
-  POSTGRES:
-    collectionId: c0631869-3a3a-419d-8a7b-1acab5a6125c
+  postgres:
     prefix: true
     vars:
       - USERNAME
       - PASSWORD
 
-  RENOVATE:
-    collectionId: cd481439-dab0-421a-9d85-61d1646a52f4
+  renovate:
     prefix: true
     vars:
       - TOKEN
       - GITHUB_COM_TOKEN
 
-  RESTIC:
-    collectionId: b02ecfb5-e0c7-4b85-9bc2-ea2c43eb52b6
+  restic:
     prefix: true
     vars:
       - PASSWORD
 
-  SMTP:
-    collectionId: 9bb1f417-7361-4d76-bd15-0c2a90d43141
+  smtp:
     prefix: true
     vars:
       - USERNAME
@@ -173,8 +145,7 @@ secrets:
       - HOST
       - PORT
 
-  SSH:
-    collectionId: 69f78f20-664b-458c-bfdf-06f7d6c0ecb9
+  ssh:
     prefix: true
     vars:
       - USERNAME
@@ -184,16 +155,23 @@ secrets:
       - name: KNOWN_HOSTS
         file: ./.ssh/known_hosts
 
-  TUNNEL:
-    collectionId: 02bfec5e-5b84-4ea6-ae6d-2675fe9910b8
+  tunnel:
     prefix: true
     vars:
       - TOKEN
       - IP
 
-  VPN:
-    collectionId: ade48834-688e-4e8b-8614-c7a9a884fba7
+  vpn:
     prefix: true
     vars:
       - PORT
       - PASSWORD_HASH
+
+  website:
+    prefix: true
+    vars:
+      - GITHUB_TOKEN
+      - GRAVATAR_EMAIL
+      - PORT
+      - CMS_USER
+      - CMS_PASSWORD
