--- a/packages/just/docker-registry/.env.secure.yaml
+++ b/packages/just/docker-registry/.env.secure.yaml
@@ -1,6 +1,5 @@
 secrets:
-  docker-registry:
-    collectionId: eaba84fc-d4dd-4736-aec0-a13e3fe71ea2
+  index:
     vars:
       - name: TRUST_CHAIN
         file: trustChain.pem
