--- a/packages/just/maintenance/.env.secure.yaml
+++ b/packages/just/maintenance/.env.secure.yaml
@@ -1,8 +1,4 @@
-env:
-  SLASH: /
 secrets:
-  common:
-    collectionId: 5d1bba8a-9ac8-4b4a-8cde-cb0dc28d1f7f
-    prefix: false
+  ../index:
     vars:
       - DOMAIN
