--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -208,14 +208,14 @@ server {
 }
 
 server {
-    set_by_lua_block $just_site_port { return os.getenv("JUST_SITE_PORT"); }
+    set_by_lua_block $website_port { return os.getenv("WEBSITE_PORT"); }
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name justinkonratt.com;
 
     location / {
-        set $upstream just-site:$just_site_port;
+        set $upstream website:$website_port;
         proxy_pass http://$upstream;
     }
 }
@@ -235,7 +235,7 @@ server {
 }
 
 server {
-    set_by_lua_block $music_port { return os.getenv("MUSIC_PORT"); }
+    set_by_lua_block $music_platform_port { return os.getenv("MUSIC_PLATFORM_PORT"); }
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
@@ -250,7 +250,7 @@ server {
     }
 
     location /rest {
-        set $upstream music:$music_port;
+        set $upstream music-platform:$music_platform_port;
         proxy_pass http://$upstream;
     }
 
