--- a/packages/just/nginx/envs.conf
+++ b/packages/just/nginx/envs.conf
@@ -28,11 +28,9 @@ env GITLAB_PORT;
 
 env GRAFANA_PORT;
 
-env JUST_SITE_PORT;
-
 env LINKWARDEN_PORT;
 
-env MUSIC_PORT;
+env MUSIC_PLATFORM_PORT;
 
 env MUSIC_DOWNLOADER_PORT;
 
@@ -53,3 +51,5 @@ env SONARQUBE_PORT;
 env VPN_PORT;
 
 env WANDB_PORT;
+
+env WEBSITE_PORT;
