--- a/packages/just/website/.env.secure.yaml
+++ b/packages/just/website/.env.secure.yaml
@@ -1,20 +1,15 @@
 secrets:
-  common:
-    collectionId: 5d1bba8a-9ac8-4b4a-8cde-cb0dc28d1f7f
-    prefix: false
+  ../index:
     vars:
       - DOMAIN
       - URL
 
-  CMS:
-    collectionId: 25cc4aac-b8ef-431c-a6b2-be521b5975b9
+  ../cms:
     prefix: true
     vars:
       - URL
 
-  JUST_SITE:
-    collectionId: 940c403f-0c7d-447b-bbe8-6e650338a5ab
-    prefix: false
+  index:
     vars:
       - GITHUB_TOKEN
       - GRAVATAR_EMAIL
@@ -22,8 +17,7 @@ secrets:
       - CMS_PASSWORD
       - PORT
 
-  SMTP:
-    collectionId: 9bb1f417-7361-4d76-bd15-0c2a90d43141
+  ../smtp:
     prefix: true
     vars:
       - USERNAME
