--- a/packages/zinzow/test-auth/.env.secure.yaml
+++ b/packages/zinzow/test-auth/.env.secure.yaml
@@ -1,14 +1,9 @@
-env:
-  EQUALS: =
-  SLASH: /
 secrets:
-  website:
-    collectionId: 3d6eef1b-1067-4c54-81e2-980d649bd379
+  ../index:
     vars:
       - DOMAIN
 
-  test-auth:
-    collectionId: a706bbc8-ca75-40c4-b533-6a5a4e43399d
+  index:
     vars:
       - USERNAME
       - PASSWORD
