--- a/packages/zinzow/website/.env.secure.yaml
+++ b/packages/zinzow/website/.env.secure.yaml
@@ -1,7 +1,9 @@
 secrets:
-  default:
-    collectionId: 3d6eef1b-1067-4c54-81e2-980d649bd379
+  ../index:
     vars:
       - DOMAIN
+
+  index:
+    vars:
       - URL
       - PORT
