--- a/packages/zinzow/.env.secure.yaml
+++ b/packages/zinzow/.env.secure.yaml
@@ -1,25 +1,25 @@
-extends: .
+extends: ../..
 env:
-  DOMAIN: agrarservicenordost.de
   STACK_NAME: ${BASE_STACK_NAME}_zinzow
 secrets:
-  CMS:
-    collectionId: 2c6e344c-5a88-41d6-8c33-78f52dbbb7e3
+  index:
+    vars:
+      - DOMAIN
+
+  cms:
     prefix: true
     vars:
       - USERNAME
       - PASSWORD
       - SECRET
 
-  POSTGRES:
-    collectionId: 9479217e-1b81-4d1f-afa0-7e7a346dc154
+  postgres:
     prefix: true
     vars:
       - USERNAME
       - PASSWORD
 
-  SSH:
-    collectionId: 80f4b6fb-11e0-40f6-849b-39a58599fbad
+  ssh:
     prefix: true
     vars:
       - USERNAME
@@ -29,8 +29,7 @@ secrets:
       - name: KNOWN_HOSTS
         file: ./.ssh/known_hosts
 
-  TUNNEL:
-    collectionId: 02f00503-8e59-4086-9891-37fa5c950bb4
+  tunnel:
     prefix: true
     vars:
       - TOKEN
